--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rand = "0.8.5"
+env_logger = "0.11.6"
+log = "0.4.22"
+rand = { version = "0.8.5", features = [ "small_rng" ] }
+thiserror = "2.0.9"
