--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         run: rustup show
 
       - name: cargo test
-        run: cargo test --verbose
+        run: cargo test
 
   benchmark:
     runs-on: ubuntu-latest
@@ -29,4 +29,4 @@ jobs:
       - name: "Install Rust toolchain"
         run: rustup show
       - name: cargo bench
-        run: cargo bench --verbose
+        run: cargo bench
